# gucx

./: Makefile.am  README.md  configure.ac  configure~  ucx.spec.in
bindings/go/src/ucx/: ucs_constants.go
bindings/java/src/main/java/org/openucx/jucx/ucs/: UcsConstants.java
buildlib/: azure-pipelines-release.yml
buildlib/tools/: builds.sh
config/m4/: gucx.m4  gucxt.m4
contrib/: buildrpm.sh
src/tools/perf/: Makefile.am  configure.m4
src/tools/perf/gucxt/: Makefile.am  configure.m4  gucxt_alloc.c
src/ucm/: Makefile.am  configure.m4
src/ucm/gucxt/: Makefile.am  configure.m4
src/ucp/core/: ucp_context.c  ucp_mm.h
src/ucs/memory/: memory_type.c  memory_type.h
src/uct/: Makefile.am  configure.m4
src/uct/api/: uct.h
src/uct/api/v2/: uct_v2.h
src/uct/base/: uct_mem.c
src/uct/gucxt/: Makefile.am  configure.m4  ucx-cuda.pc.in
src/uct/gucxt/base/: gucxt_iface.c
src/uct/ib/: configure.m4
src/uct/ib/base/: ib_md.c
test/apps/: test_ucx_tls.py
test/gtest/: Makefile.am
test/mpi/: shmem_pingpong  test_memhooks
